--- a/01-single-play.yml
+++ b/01-single-play.yml
@@ -1,13 +1,14 @@
+# ansible n1 -m file -a "path=/home/centos/n1_dir state=directory"
 ---
-- name: update n1 server
-   hosts: n1
+- name: Update n1 servers
+  hosts: n1
+  
 
-
-  tasks: 
-  - name: create directory
+  tasks:
+  - name: Create Directory
     file:
-      path: /home/centos/new_dir
+      path: /home/centos/n1_dir
       state: directory
-
 ...
+
 
