--- a/02-multi-play.yml
+++ b/02-multi-play.yml
@@ -1,50 +1,45 @@
 ---
-- name: update n1 server
-   hosts: n1
+- name: Update n1 server
+  hosts: n1
 
-
-  tasks: 
-  - name: create directory
+  tasks:
+  - name: Create Directory
     file:
       path: /home/centos/new_dir
       state: directory
 
-  - name: create directory
+  - name: Create Directory
     file:
       path: /home/centos/new_dir_1
       state: directory
 
-- name: update n2 server
-   hosts: n2
+- name: Update n2 server
+  hosts: n2
 
-
-  tasks: 
-  - name: create directory
+  tasks:
+  - name: Create Directory
     file:
       path: /home/centos/new_dir_1
       state: directory
 
-  - name: create directory
+  - name: Create Directory
     file:
       path: /home/centos/new_dir_2
       state: directory
 
 
-   - name: update group1 server
-   hosts: nserver
+- name: Update group1 servers
+  hosts: g1
 
-
-  tasks: 
-  - name: create directory
+  tasks:
+  - name: Create Directory
     file:
       path: /home/centos/new_dir_group1
       state: directory
 
-  - name: create directory
+  - name: Create Directory
     file:
       path: /home/centos/new_dir_group2
       state: directory
-   
-   ...
-   
-   
+
+...
