--- a/02-multi-play.yml
+++ b/02-multi-play.yml
@@ -1,50 +1,35 @@
 ---
 - name: Update n1 server
-   hosts: n1
-
-
-  tasks: 
-  - name: create directory
-    file:
-      path: /home/centos/new_dir
-      state: directory
-
-  - name: create directory
-    file:
-      path: /home/centos/new_dir_1
-      state: directory
-
+  hosts: n1
+  tasks:
+    - name: Create Directory
+      file:
+        path: /home/centos/new_dir
+        state: directory
+    - name: Create Directory
+      file:
+        path: /home/centos/new_dir_1
+        state: directory
 - name: Update n2 server
-   hosts: n2
-
-
-  tasks: 
-  - name: create directory
-    file:
-      path: /home/centos/new_dir_1
-      state: directory
-
-  - name: create directory
-    file:
-      path: /home/centos/new_dir_2
-      state: directory
-
-
-   - name: Update group1 server
-   hosts: nserver
-
-
-  tasks: 
-  - name: create directory
-    file:
-      path: /home/centos/new_dir_group1
-      state: directory
-
-  - name: create directory
-    file:
-      path: /home/centos/new_dir_group2
-      state: directory
-   
-   ...
-   
+  hosts: n2
+  tasks:
+    - name: Create Directory
+      file:
+        path: /home/centos/new_dir_1
+        state: directory
+    - name: Create Directory
+      file:
+        path: /home/centos/new_dir_2
+        state: directory
+- name: Update group1 servers
+  hosts: nserver
+  tasks:
+    - name: Create Directory
+      file:
+        path: /home/centos/new_dir_group1
+        state: directory
+    - name: Create Directory
+      file:
+        path: /home/centos/new_dir_group2
+        state: directory
    
