--- a/07-ubuntu-play.yml
+++ b/07-ubuntu-play.yml
@@ -7,7 +7,8 @@
   - name: Install Apache2
     apt:
       name: apache2
-      state: present
+      state: latest
+      update_cache: true
 
   - name: Start Apache2
     service:
