--- a/10-dynamic.yml
+++ b/10-dynamic.yml
@@ -1,10 +1,10 @@
 ---
 - name: Dynamic Page
-  hosts: n4
+  hosts: nserver2
   become: yes
 
   tasks:
-  - name: Update Static Page
+  - name: Update Dynamic Page
     template:
       src: dynamic.j2
       dest: /var/www/html/dynamic.html
